--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: #464646;
+    background-color: hsl(0, 45%, 92%);
 }
 
 #main {
